fixed layout overflow

--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -4,14 +4,16 @@ html, body {
 }
 
 .app {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   display: flex;
-
-  align-items: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
   justify-content: center;
 
   & > * {
+    margin-top: auto;
+    margin-bottom: auto;
     width: 100%;
     max-width: 630px;
     text-align: center;
